--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ li {
   list-style: none;
 }
 .header {
-  background-color: #F5B4B3;
+  background-color: #bcecd8;
   height: 50px;
   font-size: 1.5rem;
 }
@@ -41,7 +41,9 @@ ul.top_menu {
   text-decoration: underline;
 }
 #logo {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: cursive;
+  color: white;
+  text-decoration: none;
 }
 .logo_image {
   width: 110px;
@@ -51,10 +53,10 @@ ul.top_menu {
 .image_area{
   width: 100%;
 }
-/* #target {
+#target {
   height: 300px;
   object-fit: cover;
-} */
+}
 .wrapper{
   margin-top: 10px;
   padding-bottom: 100px;
@@ -64,7 +66,7 @@ ul.top_menu {
   float: left;
 }
 .side_menu li{
-  background-color: #F5B4B3;
+  background-color: #bcecd8;
   height: 6rem;
   margin-bottom: 10px;
 }
@@ -102,13 +104,15 @@ ul.top_menu {
 }
 .banner_content {
   margin-top: 10px;
-  display: table;
+  display: flex;
 }
-.banner_content p {
-  display: table-cell;
+.banner-img {
+  width: 310px;
 }
-.banner_content p img {
-  width: 100%;
+.banner-img img {
+  width: 310px;
+  height: 200px;
+  object-fit: cover;
 }
 .side_menu .point{
   background-color: #FCECEC;
